--- a/_posts/2017-05-15-Sitemap.md
+++ b/_posts/2017-05-15-Sitemap.md
@@ -42,3 +42,8 @@ I added `gem "jekyll-seo-tag", "~> 2.2.3"` to `Gemfile`,
 and `seo` processing command in `_includes/head.html` before `</head>`.
 There are many parameters that control the META data in `index.html`,
 currently `title` and `description` are used.
+
+I added a 16x16 shortcut icon by including this in the header:
+```
+  <link rel="shortcut icon" type="image/png" href="https://avatars2.githubusercontent.com/u/6766826?v=3&s=16">
+```
