--- a/_posts/2017-07-25-YFHP.md
+++ b/_posts/2017-07-25-YFHP.md
@@ -5,5 +5,7 @@ tags: yahoo finance
 ---
 
 I created a Jupyter notebook for downloading AAPL
-historical prices due to recent changes in the Yahoo Finance website:
-[YF Prices](/notebooks/Yahoo Finance Crumb Historical Price Download.ipynb)
+historical prices due to recent changes in the Yahoo Finance website.
+The notebook can be download [here](/notebooks/Yahoo Finance Crumb Historical Price Download.ipynb)
+or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/Yahoo%20Finance%20Crumb%20Historical%20Price%20Download.ipynb).
+
