--- a/_posts/2018-02-14-UnaryNN.md
+++ b/_posts/2018-02-14-UnaryNN.md
@@ -9,3 +9,5 @@ available [here](/notebooks/UnaryOperatorsNN.ipynb)
 or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/UnaryOperatorsNN.ipynb) at GitHub.
 
 This provides some insight to how ANN work on simple problems.
+Note that this notebook uses `estimator.fit` to do a regression, not a classification.
+
