--- a/_posts/2018-02-14-UnaryNN.md
+++ b/_posts/2018-02-14-UnaryNN.md
@@ -1,13 +1,16 @@
 ---
 layout: post
-title:  "Modeling Unary Operators with an Artifical Neural Network"
+title:  "Modeling Binary and Unary Operators with an Artifical Neural Network"
 tags: ANN tensorflow
 ---
 
 I created a Jupyter notebook for modeling unary functions
 available [here](/notebooks/UnaryOperatorsNN.ipynb)
 or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/UnaryOperatorsNN.ipynb) at GitHub.
+And [here](/notebooks/BinaryOperatorsNN.ipynb)
+is a notebook for binary functions
+or [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/BinaryOperatorsNN.ipynb).
 
 This provides some insight to how ANN work on simple problems.
-Note that this notebook uses `estimator.fit` to do a regression, not a classification.
+Note that this notebook uses `tf.contrib.learn.DNNRegressor` to do a regression, not a classification.
 
