--- a/_posts/2018-02-14-UnaryNN.md
+++ b/_posts/2018-02-14-UnaryNN.md
@@ -12,5 +12,5 @@ is a notebook for binary functions
 or [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/BinaryOperatorsNN.ipynb).
 
 This provides some insight to how ANN work on simple problems.
-Note that this notebook uses `tf.contrib.learn.DNNRegressor` to do a regression, not a classification.
+Note that these notebooks use `tf.contrib.learn.DNNRegressor` to do a regression, not a classification.
 
