--- a/_posts/2018-02-14-UnaryNN.md
+++ b/_posts/2018-02-14-UnaryNN.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Modeling Binary and Unary Operators with an Artifical Neural Network"
 tags: ANN tensorflow
 ---
+To develop an understanding of tensorflow's ANN I implemented regression models of several unary and binary functions.
 
 I created a Jupyter notebook for modeling unary functions
 available [here](/notebooks/UnaryOperatorsNN.ipynb)
