--- a/_posts/2018-02-14-UnaryNN.md
+++ b/_posts/2018-02-14-UnaryNN.md
@@ -12,6 +12,12 @@ And [here](/notebooks/BinaryOperatorsNN.ipynb)
 is a notebook for binary functions
 or [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/BinaryOperatorsNN.ipynb).
 
+I show examples of 1 and 2 hidden layer ANNs.
+In a single hidden layer, I show that unary function are sums of scaled ReLus,
+where the number of ReLus is the number of nodes in the layer.
+With 2 layers, I show that it is the sum of piecewise linear functions,
+where the number of pieces is the number of nodes in the first layer.
+
 This provides some insight to how ANN work on simple problems.
 Note that these notebooks use `tf.contrib.learn.DNNRegressor` to do a regression, not a classification.
 
