--- a/_posts/2018-04-02-pointset.md
+++ b/_posts/2018-04-02-pointset.md
@@ -10,6 +10,6 @@ including minimum spanning tree, Gabriel graphs, and point location. The point l
 difficult algorithm.
 I created a Jupyter notebook for
 the implementation
-available [here](/notebooks/Quickselect.ipynb)
-or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/Quickselect.ipynb) at GitHub.
+available [here](/notebooks/pointset.ipynb)
+or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/pointset.ipynb) at GitHub.
 When the notebook completes successfully, the final cell converts the notebook into a Python module.
