--- a/_posts/2018-05-20-tfqp.md
+++ b/_posts/2018-05-20-tfqp.md
@@ -10,8 +10,8 @@ The penalty term used is proportional to 1/2 of the sum of the constraint errors
 on the Lagranian function.
 Initially the penalty is relaxed; as the solution is approached
 the penalty term is tighted.
-The key elements of the solution is a technique for estimating
-$\lambda$s in the Lagrangian.
+The key elements of the solution is a technique for estimating Lagranian
+$\lambda$ values.
 
 I created a Jupyter notebook for
 a sample problem with one equality constraint,
