--- a/_posts/2018-05-20-tfqp.md
+++ b/_posts/2018-05-20-tfqp.md
@@ -11,7 +11,7 @@ on the Lagranian function.
 Initially the penalty is relaxed; as the solution is approached
 the penalty term is tighted.
 The key elements of the solution is a technique for estimating Lagranian
-$\lambda$ values.
+lambda values.
 
 I created a Jupyter notebook for
 a sample problem with one equality constraint,
