--- a/_posts/2018-05-20-tfqp.md
+++ b/_posts/2018-05-20-tfqp.md
@@ -17,3 +17,12 @@ I created a Jupyter notebook for
 a sample problem with one equality constraint,
 available [here](/notebooks/TF Single Equality Constrained Quadratic Optimizing.ipynb)
 or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/TF Single Equality Constrained Quadratic Optimizing.ipynb) at GitHub.
+
+For an inequality constraint, I used a similar technique but the Lagrangian \\(\lambda\\) values are non-negative.
+The inequalities are represented as equalities along with an associated slack value.
+An additional optimization technique is used to determine the slack values.
+
+I created a Jupyter notebook for
+a sample problem with one inequality constraint,
+available [here](/notebooks/TF Single Inequality Constrained Quadratic Optimizing.ipynb)
+or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/TF Single Inequality Constrained Quadratic Optimizing.ipynb) at GitHub.
