--- a/_posts/2018-05-20-tfqp.md
+++ b/_posts/2018-05-20-tfqp.md
@@ -26,3 +26,6 @@ I created a Jupyter notebook for
 a sample problem with one inequality constraint,
 available [here](/notebooks/TF Single Inequality Constrained Quadratic Optimizing.ipynb)
 or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/TF Single Inequality Constrained Quadratic Optimizing.ipynb) at GitHub.
+
+The mathematics supporting these techniques is well described in
+[Numerical Optimization, Nocedal & Wright, 2006](http://www.bioinfo.org.cn/~wangchao/maa/Numerical_Optimization.pdf)
