--- a/_posts/2018-05-20-tfqp.md
+++ b/_posts/2018-05-20-tfqp.md
@@ -27,5 +27,15 @@ a sample problem with one inequality constraint,
 available [here](/notebooks/TF Single Inequality Constrained Quadratic Optimizing.ipynb)
 or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/TF Single Inequality Constrained Quadratic Optimizing.ipynb) at GitHub.
 
+Although these notebooks demostrate a single constraint,
+the solutions generalize to as many constraints as needed.
+Combining the techniques in the notebooks would produce an
+optimizer that handles equalities and inequalities.
+
+Additionally, there are no particular restrictions on the quadratic term.
+In finance this represents the risk term.
+Handling a more structured risk model is not a problem,
+such as a model with factor risks and specific risks.
+
 The mathematics supporting these techniques is well described in
 [Numerical Optimization, Nocedal & Wright, 2006](http://www.bioinfo.org.cn/~wangchao/maa/Numerical_Optimization.pdf)
