--- a/_posts/2018-05-20-tfqp.md
+++ b/_posts/2018-05-20-tfqp.md
@@ -4,10 +4,14 @@ title:  "TF Quadratic Programming"
 tags: tensorflow algorithms QP
 ---
 Using a penalty function technique, I used TensorFlow to solve
-quadratic programming problems.
+constrained quadratic programming problems.
 
-The penalty term used is proportional to 1/2 of the sum of the constraint errors squared
-on the Lagranian function.
+First, I show a solution to an unconstrained quadratic programming problem
+available [here](/notebooks/TF Unconstrained Quadratic Optimizing.ipynb)
+or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/TF Unconstrained Quadratic Optimizing.ipynb) at GitHub.
+
+For constrained problems a penalty term is introduction to the Lagrangian function.
+The penalty term is proportional to the sum of the constraint errors squared.
 Initially the penalty is relaxed; as the solution is approached
 the penalty term is tighted.
 The key elements of the solution is a technique for estimating Lagranian
