--- a/_posts/2018-05-20-tfqp.md
+++ b/_posts/2018-05-20-tfqp.md
@@ -31,6 +31,8 @@ a sample problem with one inequality constraint,
 available [here](/notebooks/TF Single Inequality Constrained Quadratic Optimizing.ipynb)
 or viewed [online](https://github.com/cygnyx/cygnyx.github.io/blob/master/notebooks/TF Single Inequality Constrained Quadratic Optimizing.ipynb) at GitHub.
 
+This notebook includes a nice contour plot overlayed with the optimizer's path to the solution.
+
 Although these notebooks demostrate a single constraint,
 the solutions generalize to as many constraints as needed.
 Combining the techniques in the notebooks would produce an
