--- a/_posts/2018-11-01-annref.md
+++ b/_posts/2018-11-01-annref.md
@@ -7,6 +7,10 @@ tags: algorithms reference ANN vision
 Artifical Neural Network References.
 
 Andrew Ng refers to [2013Redmon] and [2016Redmon].
+FaceNet [2015Schroff]
+DeepFace [2014Taigman]
+Visualizing and Understanding Convolutional Networks [2013Zeiler].
+A neural algorithm of artistic style [2015Gatys].
 
 References:
 * [2013Redmon] Joseph Redmon, Santosh Divvala, Ross Girshick, Ali Farhadi. "You Only Look Once: Unified, Real-Time Object Detection" 9 May 2016
@@ -14,3 +18,7 @@ References:
 
 [2013Redmon]: https://arxiv.org/abs/1506.02640v
 [2016Redmon]: https://arxiv.org/abs/1612.08242
+[2015Schroff]: https://arxiv.org/abs/1503.03832
+[2014Taignam]: https://research.fb.com/publications/deepface-closing-the-gap-to-human-level-performance-in-face-verification/
+[2013Zeiler]: https://arxiv.org/abs/1311.2901
+[2015Gatys]: https://arxiv.org/abs/1508.06576
