--- a/_posts/2019-04-28-aws.md
+++ b/_posts/2019-04-28-aws.md
@@ -11,11 +11,11 @@ After starting the instance:
 ```bash
 ssh ec2-XXXXXXXXX.us-west-2.compute.amazonaws.com
 ```
-To confirm ssh CLI access.
-In ~/.ssh, I saved the rsa key in from_amazon_authorized_keys.
-In config, I added Host *.us-west-2.compute.amazonaws.com entry
+To confirm ssh CLI access:
+* In ~/.ssh, I saved the rsa key in from_amazon_authorized_keys.
+* In config, I added Host *.us-west-2.compute.amazonaws.com entry
 with this as the IdentityFile and setting User.
-In Emacs, using tramp I can access the filesystem with /XXXXXXXXX.us-west-2.compute.amazonaws.com:/
+* In Emacs, using tramp I can access the filesystem with /XXXXXXXXX.us-west-2.compute.amazonaws.com:/
 and use Esc-! to run commands there.
 
 Created an IAM cli user and Administrator group [following AWS steps][IAM].
