Update and rename 2202-01-15-sqlgen.md to 2022-01-16-sqlgen.md

--- a/_posts/2022-01-16-sqlgen.md
+++ b/_posts/2022-01-16-sqlgen.md
@@ -5,3 +5,12 @@ tags: SQL
 ---
 
 Using a JSON based ER model, generate SQL query.
+
+This page requires javascript to work.
+
+<script>
+testing = 1
+</script>
+<script>
+testing = 2
+</script>
